methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:35: error: not found: value pColor
  fleur(pColor.green,Color.yellow)
        ^